# building_babel

./: .gitignore  README.md  pyproject.toml
notebooks/: Untitled.ipynb  Untitled1.ipynb  data_investigation.ipynb  makemore.ipynb  tiny_stories_data.ipynb
scripts/: tinystories_training.py  tinystories_training_lightning.py
src/building_babel/: model.py  tokenizers.py  types.py
src/building_babel/modules/: growable.py  rope.py
tests/: test_grow.py
